--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET=G-KaPdSgVkYp3s6v8y/B?E(H+MbQeThW
 JWT_LIFETIME=30d
 PORT=5000
 REACT_APP_MOVIE_API_KEY=0f12a2b7d6157e096f4bc4be8ac5bea7
+NODE_ENV=production
