--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.3",
-    "react-youtube": "^7.14.0"
+    "react-youtube": "^7.14.0",
+    "framer-motion": "^1.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
