--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.1",
+    "framer-motion": "^1.10.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.3.1",
+    "react-indiana-drag-scroll": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.3",
-    "react-youtube": "^7.14.0",
-    "framer-motion": "^1.10.3"
+    "react-youtube": "^7.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
